force-app/main/default/objects/Campaign/fields/Academic_Institution__c.field-meta.xml
<CustomField>
    <fullName>Academic_Institution__c</fullName>
    <label>Academic Institution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>