force-app/main/default/objects/Campaign/fields/Campaign_ROI__c.field-meta.xml
<CustomField>
    <fullName>Campaign_ROI__c</fullName>
    <formula>( AmountWonOpportunities -  ActualCost ) /  ActualCost</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>ROI is the return on investment or net gain.  This is a sample formula field that calculates (TOTAL VALUE WON OPPORTUNITIES - ACTUAL COST) / ACTUAL COST</inlineHelpText>
    <label>Campaign ROI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>