force-app/main/default/objects/Campaign/fields/Certificates__c.field-meta.xml
<CustomField>
    <fullName>Certificates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificates</label>
    <type>Checkbox</type>
</CustomField>