force-app/main/default/objects/Campaign/fields/Course_Director__c.field-meta.xml
<CustomField>
    <fullName>Course_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Director</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Seminars Directed</relationshipLabel>
    <relationshipName>Seminars_Directed</relationshipName>
    <type>Lookup</type>
</CustomField>