force-app/main/default/objects/Campaign/fields/CV__c.field-meta.xml
<CustomField>
    <fullName>CV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bio</label>
    <type>Checkbox</type>
</CustomField>