force-app/main/default/objects/Campaign/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <description>Source org Campaign Id for data migration and sync</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>