force-app/main/default/objects/Campaign/fields/Fund__c.field-meta.xml
<CustomField>
    <fullName>Fund__c</fullName>
    <label>Fund</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Investors</fullName>
            </value>
            <value>
                <fullName>RPI Finance Trust</fullName>
            </value>
            <value>
                <fullName>RPS Finance Trust</fullName>
            </value>
            <value>
                <fullName>RP Cayman Partners</fullName>
            </value>
            <value>
                <fullName>RP Cayman Partners 2008</fullName>
            </value>
            <value>
                <fullName>RP US Partners</fullName>
            </value>
            <value>
                <fullName>RP US Partners 2008</fullName>
            </value>
            <value>
                <fullName>RPI International Holdings</fullName>
            </value>
            <value>
                <fullName>RPI US Partners</fullName>
            </value>
            <value>
                <fullName>RPI US Partners II</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>