force-app/main/default/objects/Campaign/fields/Invitation_Letter__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invitation Letter</label>
    <type>Checkbox</type>
</CustomField>