force-app/main/default/objects/Campaign/fields/No__c.field-meta.xml
<CustomField>
    <fullName>No__c</fullName>
    <label>No</label>
    <summaryFilterItems>
        <field>CampaignMember.Status</field>
        <operation>equals</operation>
        <value>NO</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>