force-app/main/default/objects/Campaign/fields/No_of_Participants__c.field-meta.xml
<CustomField>
    <fullName>No_of_Participants__c</fullName>
    <label>No. of Participants</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>