force-app/main/default/objects/Campaign/fields/Photo__c.field-meta.xml
<CustomField>
    <fullName>Photo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Photo</label>
    <type>Checkbox</type>
</CustomField>