force-app/main/default/objects/Campaign/fields/Recomendation__c.field-meta.xml
<CustomField>
    <fullName>Recomendation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recommendation letter</label>
    <type>Checkbox</type>
</CustomField>