force-app/main/default/objects/Campaign/fields/Strategic_Tier__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Tier__c</fullName>
    <description>quality and level of access of RP Mgt members</description>
    <label>RP Access</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
                <default>true</default>
                <label>High</label>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>