force-app/main/default/objects/Campaign/fields/Total_Attending__c.field-meta.xml
<CustomField>
    <fullName>Total_Attending__c</fullName>
    <label>Total Attending</label>
    <summarizedField>CampaignMember.Attend__c</summarizedField>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>