force-app/main/default/objects/Campaign/fields/Total_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Total_Contribution__c</fullName>
    <label>Total Contribution</label>
    <summarizedField>CampaignMember.Contibution__c</summarizedField>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>