force-app/main/default/objects/Campaign/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OMI Seminar</fullName>
            </value>
            <value>
                <fullName>OMI-MEX Seminar</fullName>
            </value>
            <value>
                <fullName>AMSA Seminar</fullName>
            </value>
            <value>
                <fullName>AMSA Activity</fullName>
            </value>
            <value>
                <fullName>OMI Observership</fullName>
            </value>
            <value>
                <fullName>CHOP Observership</fullName>
                <default>true</default>
                <label>CHOP Observership</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>