force-app/main/default/objects/Campaign/fields/University__c.field-meta.xml
<CustomField>
    <fullName>University__c</fullName>
    <label>University?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>