force-app/main/default/objects/Campaign/fields/Visa__c.field-meta.xml
<CustomField>
    <fullName>Visa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visa</label>
    <type>Checkbox</type>
</CustomField>