force-app/main/default/objects/Campaign/fields/Yes__c.field-meta.xml
<CustomField>
    <fullName>Yes__c</fullName>
    <label>Yes</label>
    <summarizedField>CampaignMember.Attend__c</summarizedField>
    <summaryFilterItems>
        <field>CampaignMember.Status</field>
        <operation>equals</operation>
        <value>YES</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>