force-app/main/default/objects/Campaign/recordTypes/Alianza_Campaign_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Alianza_Campaign_Record_Type</fullName>
    <active>true</active>
    <label>Alianza Campaign Record Type</label>
</RecordType>