force-app/main/default/objects/Campaign/recordTypes/Investor_Groupings.recordType-meta.xml
<RecordType>
    <fullName>Investor_Groupings</fullName>
    <active>false</active>
    <description>11 Clusters of LP Holdings</description>
    <label>Investor Groupings</label>
</RecordType>