force-app/main/default/objects/Campaign/recordTypes/Master_Campaign_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Master_Campaign_Record_Type</fullName>
    <active>true</active>
    <label>Master Campaign Record Type</label>
</RecordType>