force-app/main/default/objects/Campaign/recordTypes/Portal_Users.recordType-meta.xml
<RecordType>
    <fullName>Portal_Users</fullName>
    <active>false</active>
    <description>Portal-Enabled Contacts</description>
    <label>Portal Users</label>
</RecordType>